#916 -- Addressed issue with progress bar not showing between mobile and xlarge screen states. Addressed issue with Language selector's text not lining up with other text (menu items) in the header. Addressed this issue in both global header and country header

--- a/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
@@ -41,6 +41,13 @@
 
       .dropdown-language {
         margin-left: $spacing-04;
+        height: 7.1875rem;
+        display: flex;
+        align-items: center;
+
+        @include devicebreak(mediumonlytab) {
+          display: none;
+        }
       }
     }
 
